commit al master

--- a/cssensayo/estilos.css
+++ b/cssensayo/estilos.css
@@ -5,3 +5,7 @@ body
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
 }
+h1{
+    color: black;
+    font-size: 18px;
+}
